2010-06-30  Michael Matz  <matz@suse.de>

	* repo.c ((finish_repo): Fix typo.

2010-06-30  Nathan Froyd  <froydnj@codesourcery.com>

	* parser.c (cp_parser_omp_for_loop): Use a VEC for for_block.

2010-06-30  Nathan Froyd  <froydnj@codesourcery.com>

	* repo.c (pending_repo): Change type to a VEC.
	(finish_repo): Adjust for new type of pending_repo.
	(repo_emit_p): Likewise.

2010-06-30  Manuel López-Ibáñez  <manu@gcc.gnu.org>

	* tree.c: Include gimple.h. Do not include tree-flow.h
	* decl.c: Do not include tree-flow.h
	* Make-lang.in: Adjust dependencies.
	
2010-06-29  Nathan Froyd  <froydnj@codesourcery.com>

	* decl.c (incomplete_var): Declare.  Declare VECs containing them.
	(incomplete_vars): Adjust comment.  Change type to a VEC.
	(maybe_register_incomplete_var): Adjust for new type.
	(complete_vars): Adjust iteration over incomplete_vars.

2010-06-29  Nathan Froyd  <froydnj@codesourcery.com>

	* decl.c (struct named_label_entry): Change type of bad_decls field
	to a VEC.
	(poplevel_named_label_1): Adjust for new type of bad_decls.
	(check_goto): Likewise.

2010-06-29  Jason Merrill  <jason@redhat.com>

	Enable implicitly declared move constructor/operator= (N3053).
	* class.c (add_implicitly_declared_members): A class with no
	explicitly declared copy or move constructor gets both declared
	implicitly, and similarly for operator=.
	(check_bases): A type with no copy ctor does not inhibit
	a const copy ctor in a derived class.  It does mean the derived
	one is non-trivial.
	(check_field_decl): Likewise.
	(check_bases_and_members): A nonexistent copy ctor/op= is non-trivial.
	* tree.c (type_has_nontrivial_copy_init): Adjust semantics.
	(trivially_copyable_p): Likewise.
	* call.c (convert_like_real): Use type_has_nontrivial_copy_init.
	* class.c (finish_struct_bits): Likewise.
	* tree.c (build_target_expr_with_type): Likewise.
	* typeck2.c (store_init_value): Likewise.

	Enable implicitly deleted functions (N2346)