@@ -1,3 +1,8 @@
+2010-06-30  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	PR c++/44628
+	* g++.dg/template/crash100.C: New.
+
 2010-06-30  Jan Hubicka  <jh@suse.cz>
 
 	* gcc.dg/tree-ssa/ipa-split-4.c: New testcase.
