@@ -1,6 +1,14 @@
+2010-06-30  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	PR c++/44628
+	* typeck.c (cp_build_unary_op): Early return error_mark_node when
+	arg is NULL_TREE too.
+	* call.c (convert_class_to_reference): Return error_mark_node when
+	expr is NULL_TREE.
+
 2010-06-30  Michael Matz  <matz@suse.de>
 
-	* repo.c ((finish_repo): Fix typo.
+	* repo.c (finish_repo): Fix typo.
 
 2010-06-30  Nathan Froyd  <froydnj@codesourcery.com>
 
@@ -17,7 +25,7 @@
 	* tree.c: Include gimple.h. Do not include tree-flow.h
 	* decl.c: Do not include tree-flow.h
 	* Make-lang.in: Adjust dependencies.
-	
+
 2010-06-29  Nathan Froyd  <froydnj@codesourcery.com>
 
 	* decl.c (incomplete_var): Declare.  Declare VECs containing them.
